fix layout overlap

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -52,7 +52,7 @@ $caption-font-family        : $serif;
 $small                      : 600px !default;
 $medium                     : 768px !default;
 $medium-wide                : 900px !default;
-$large                      : 925px !default;
+$large                      : 1024px !default;
 $x-large                    : 1280px !default;
 
 /* ==========================================================================
